objects/VisualAntidote__Alert__c.object
<CustomObject>
    <fields>
        <fullName>VisualAntidote__Alert_Type__c</fullName>
        <label>Alert Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FAILURE</fullName>
                </value>
                <value>
                    <fullName>SAVE_FOR_LATER</fullName>
                </value>
                <value>
                    <fullName>FAILED_PAYMENT</fullName>
                </value>
                <value>
                    <fullName>SUCCESSFUL_SUBMISSION</fullName>
                </value>
                <value>
                    <fullName>EMAIL_VERIFICATION</fullName>
                </value>
                <value>
                    <fullName>ADMIN_PDF</fullName>
                </value>
                <value>
                    <fullName>USER_PDF</fullName>
                </value>
                <value>
                    <fullName>LOOKUP_FAILURE</fullName>
                </value>
                <value>
                    <fullName>AUTH_FAILURE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisualAntidote__Attach_Files__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attach Files</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Attach_PDF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attach PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__BCC__c</fullName>
        <label>BCC</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Body__c</fullName>
        <label>Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__CC__c</fullName>
        <label>CC</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ad-hoc</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>System</fullName>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisualAntidote__Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form</label>
        <referenceTo>VisualAntidote__Previous_Form__c</referenceTo>
        <relationshipLabel>Alerts</relationshipLabel>
        <relationshipName>Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__From__c</fullName>
        <label>From</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Status__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Subject__c</fullName>
        <label>Subject</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__To__c</fullName>
        <label>To</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Alert</label>
    <listViews>
        <fullName>Nolan_Daigle_Alert</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>VisualAntidote__All</fullName>
        <columns>VisualAntidote__Alert_Type__c</columns>
        <columns>VisualAntidote__Category__c</columns>
        <columns>VisualAntidote__Form__c</columns>
        <columns>VisualAntidote__Name__c</columns>
        <columns>VisualAntidote__Status__c</columns>
        <columns>VisualAntidote__Subject__c</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>VisualAntidote__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>VisualAntidote__Internal_Alerts</fullName>
        <columns>NAME</columns>
        <columns>VisualAntidote__Alert_Type__c</columns>
        <columns>VisualAntidote__Name__c</columns>
        <columns>VisualAntidote__Form__c</columns>
        <columns>VisualAntidote__Status__c</columns>
        <columns>VisualAntidote__From__c</columns>
        <columns>VisualAntidote__Subject__c</columns>
        <columns>VisualAntidote__To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>VisualAntidote__Category__c</field>
            <operation>equals</operation>
            <value>Internal</value>
        </filters>
        <label>Internal Alerts</label>
    </listViews>
    <nameField>
        <displayFormat>FA-{00000}</displayFormat>
        <label>Alert Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>